--- a/index.html
+++ b/index.html
@@ -9,23 +9,87 @@
     <link rel="stylesheet" href="../train-scheduler/assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../train-scheduler/assets/css/style.css">
-</head>
-<body>
-    <div class = container>
-        <div class = jumbotron>
-            <h1>Train Scheduler</h1>
-        </div>
-        <div class = card>
-            <div class = card-header><h3>Current Train Schedule</h3></div>
-            <div class = card-body>Amtrak</div>
-        </div>
-        <div class = card>
-            <div class = card-header>Add Train</div>
-        </div>
 
+  <!-- Firebase Reference -->
+  <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-database.js"></script>
+
+  <!-- Moment.js Reference -->
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <script src="assets/javascript/app.js"></script>
+
+  </head>
+  <body>
+  <!--Train tracker-->
+  <div class ="container">
+  <!--Jumbotron-->
+  <div class ="jumbotron">
+    <h1 class="text-center">Train Scheduler</h1>
+  </div>
+  <div class="row">
+      <div class="col-lg-12">
+      <!--Current Train Schedule-->
+      <div class="card">
+            <h5 class="card-header"><strong>Current Train Schedule</strong></h5>
+          <div class="card-body">
+            <table class="table table-hover" id='trainTable'>
+              <thead>
+                <tr>
+                  <th>Train Name</th>
+                  <th>Destination</th>
+                  <th>Next Arrival</th>
+                  <th>Frequency(minutes)</th>
+                  <th>Minutes Away</th>
+                </tr>
+              </thead>
+              <tbody>
+                
+              </tbody>
+            </table>
+          </div>
+        </div>
+  
+        <!-- Add Trains  -->
+        <div class="card">
+          <!-- <div class="panel-heading"> -->
+            <h3 class="card-header"><strong>Add Trains</strong></h3>
+          <!-- </div> -->
+          <div class="card-body">
+  
+          <!-- Entry Form -->
+          <form>
+            <div class="form-group">
+              <label for="">Train Name</label>
+              <input type="text" class="form-control" id="trainNameInput">
+            </div>
+  
+            <div class="form-group">
+              <label for="">Destination</label>
+              <input type="text" class="form-control" id="destinationInput">
+            </div>
+  
+            <div class="form-group">
+              <label for="">First Train Time (HH:mm - ex: 02:00)</label>
+              <input type="text" class="form-control" id="timeInput">
+            </div>
+  
+            <div class="form-group">
+              <label for="">Frequency(minutes)</label>
+              <input type="text" class="form-control" id="frequencyInput">
+            </div>
+            
+            <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
+          </form>
+  
+          </div>
+        </div>
+  
+      </div>
     </div>
+  </div>
 
-<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
-<script src="assets/javascript/app.js"></script>
 </body>
 </html>
