Fixed link to Firebase on HTML

--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../train-scheduler/assets/css/style.css">
 
+
+    <!-- Moment.js Reference -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
   <!-- Firebase Reference -->
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-database.js"></script>
+  <!-- <script src="assets/javascript/app.js"></script> -->
 
   <!-- Moment.js Reference -->
-  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script> -->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
-  <script src="assets/javascript/app.js"></script>
+  <!-- <script src="assets/javascript/app.js"></script> -->
 
   </head>
   <body>
@@ -55,7 +63,7 @@
         <!-- Add Trains  -->
         <div class="card">
           <!-- <div class="panel-heading"> -->
-            <h3 class="card-header"><strong>Add Trains</strong></h3>
+            <h5 class="card-header"><strong>Add Trains</strong></h5>
           <!-- </div> -->
           <div class="card-body">
   
@@ -86,10 +94,11 @@
   
           </div>
         </div>
-  
+
       </div>
     </div>
   </div>
 
+  <script src="assets/javascript/app.js"></script>
 </body>
 </html>
