--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Train Scheduler</title>
+    <title>Aviato Flight Scheduler</title>
 
     <link rel="stylesheet" href="../train-scheduler/assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -35,18 +35,20 @@
   <div class ="container">
   <!--Jumbotron-->
   <div class ="jumbotron">
-    <h1 class="text-center">Train Scheduler</h1>
+    <!-- <h1 class="text-center">Flight Scheduler</h1> -->
   </div>
+  <div class="card card-header"><h1>Flight Scheduler</h1></div>
+  <br><br>
   <div class="row">
       <div class="col-lg-12">
       <!--Current Train Schedule-->
       <div class="card">
-            <h5 class="card-header"><strong>Current Train Schedule</strong></h5>
+            <h5 class="card-header"><strong>Current Flight Schedule</strong></h5>
           <div class="card-body">
-            <table class="table table-hover" id='trainTable'>
+            <table class="table table-hover" id='flightTable'>
               <thead>
                 <tr>
-                  <th>Train Name</th>
+                  <th>Flight Name</th>
                   <th>Destination</th>
                   <th>Next Arrival</th>
                   <th>Frequency(minutes)</th>
@@ -60,18 +62,18 @@
           </div>
         </div>
   
-        <!-- Add Trains  -->
+        <!-- Add Flights  -->
         <div class="card">
           <!-- <div class="panel-heading"> -->
-            <h5 class="card-header"><strong>Add Trains</strong></h5>
+            <h5 class="card-header"><strong>Add Flight</strong></h5>
           <!-- </div> -->
           <div class="card-body">
   
           <!-- Entry Form -->
           <form>
             <div class="form-group">
-              <label for="">Train Name</label>
-              <input type="text" class="form-control" id="trainNameInput">
+              <label for="">Flight Name</label>
+              <input type="text" class="form-control" id="flightNameInput">
             </div>
   
             <div class="form-group">
@@ -80,7 +82,7 @@
             </div>
   
             <div class="form-group">
-              <label for="">First Train Time (HH:mm - ex: 02:00)</label>
+              <label for="">First Flight Time (HH:mm - ex: 02:00)</label>
               <input type="text" class="form-control" id="timeInput">
             </div>
   
@@ -89,7 +91,7 @@
               <input type="text" class="form-control" id="frequencyInput">
             </div>
             
-            <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
+            <button type="submit" class="btn btn-primary" id="addFlightBtn">Submit</button>
           </form>
   
           </div>
