Fine tuned CSS styling

--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 
   </head>
   <body>
-  <!--Train tracker-->
+  <!--Flight tracker-->
   <div class ="container">
   <!--Jumbotron-->
-  <div class ="jumbotron">
-    <!-- <h1 class="text-center">Flight Scheduler</h1> -->
-  </div>
+  <div class ="jumbotron"></div>
   <div class="card card-header"><h1>Flight Scheduler</h1></div>
   <br><br>
   <div class="row">
       <div class="col-lg-12">
-      <!--Current Train Schedule-->
+      <!--Current Flight Schedule-->
       <div class="card">
             <h5 class="card-header"><strong>Current Flight Schedule</strong></h5>
           <div class="card-body">
